# daily_excel_reports

./: README.md  conftest.py  create_excel_sample.py  pyproject.toml  pytest.ini  sample_data.csv
data/: sample_data_processed_20250517_001809.xlsx
src/: __init__.py  __main__.py  cli.py  exporters.py  loaders.py  processor.py  transformations.py  transformations_examples.py  web.py
src/utils/: __init__.py  config.py  exceptions.py  logging.py
tests/: conftest.py  test_config.py  test_loaders.py  test_processor.py  test_web.py
